unpackaged/main/default/objects/ServiceContract/fields/AMS_Program_Link__c.field-meta.xml
<CustomField>
    <fullName>AMS_Program_Link__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>AMS Program Link</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Service Contracts (AMS Program Link)</relationshipLabel>
    <relationshipName>Service_Contracts2</relationshipName>
    <type>Lookup</type>
</CustomField>