unpackaged/main/default/objects/ServiceContract/fields/Anniversary_Date__c.field-meta.xml
<CustomField>
    <fullName>Anniversary_Date__c</fullName>
    <description>Anniversary Date</description>
    <formula>StartDate + 365</formula>
    <label>Anniversary Date</label>
    <type>Date</type>
</CustomField>