unpackaged/main/default/objects/ServiceContract/fields/Apply_AMS_Program_Discount__c.field-meta.xml
<CustomField>
    <fullName>Apply_AMS_Program_Discount__c</fullName>
    <defaultValue>false</defaultValue>
    <label>OBSOLETE Apply AMS Program Discount</label>
    <type>Checkbox</type>
</CustomField>