unpackaged/main/default/objects/ServiceContract/fields/Auto_Amendment_Control__c.field-meta.xml
<CustomField>
    <fullName>Auto_Amendment_Control__c</fullName>
    <formula>If( EndDate &gt;= TODAY() &amp;&amp;(Term/12) &gt; No_of_Auto_Ammendments__c + 1,FALSE,TRUE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Auto Amendment Control</label>
    <type>Checkbox</type>
</CustomField>