unpackaged/main/default/objects/ServiceContract/fields/Auto_Amendment_Override_Date__c.field-meta.xml
<CustomField>
    <fullName>Auto_Amendment_Override_Date__c</fullName>
    <label>Auto Amendment Override Date</label>
    <type>Date</type>
</CustomField>