unpackaged/main/default/objects/ServiceContract/fields/Auto_Renewal_Date__c.field-meta.xml
<CustomField>
    <fullName>Auto_Renewal_Date__c</fullName>
    <label>Auto-Renewal Date</label>
    <type>Date</type>
</CustomField>