unpackaged/main/default/objects/ServiceContract/fields/Auto_Renewal_Treatment__c.field-meta.xml
<CustomField>
    <fullName>Auto_Renewal_Treatment__c</fullName>
    <label>Auto-Renewal Treatment</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Auto_Renewal_Treatment</valueSetName>
    </valueSet>
</CustomField>