unpackaged/main/default/objects/ServiceContract/fields/Auto_Renewed_Ordered__c.field-meta.xml
<CustomField>
    <fullName>Auto_Renewed_Ordered__c</fullName>
    <description>One way Twin field</description>
    <formula>SBQQSC__Opportunity__r.Auto_Renewed__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Auto Renewed</label>
    <type>Checkbox</type>
</CustomField>