unpackaged/main/default/objects/ServiceContract/fields/Billing_Account__c.field-meta.xml
<CustomField>
    <fullName>Billing_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Billing Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Service Contracts</relationshipLabel>
    <relationshipName>Service_Contracts</relationshipName>
    <type>Lookup</type>
</CustomField>