unpackaged/main/default/objects/ServiceContract/fields/Campaign_Discount__c.field-meta.xml
<CustomField>
    <fullName>Campaign_Discount__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Campaign discount entered on the opportunity to apply to the quote.</description>
    <label>Campaign Discount</label>
    <referenceTo>Campaign</referenceTo>
    <relationshipLabel>Service Contracts</relationshipLabel>
    <relationshipName>Service_Contracts3</relationshipName>
    <type>Lookup</type>
</CustomField>