unpackaged/main/default/objects/ServiceContract/fields/Campaign_Used__c.field-meta.xml
<CustomField>
    <fullName>Campaign_Used__c</fullName>
    <description>Name of the campaign that has been added into the Opportunity</description>
    <formula>SBQQSC__Opportunity__r.Campaign__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>OBSOLETE Campaign Used</label>
    <type>Text</type>
</CustomField>