unpackaged/main/default/objects/ServiceContract/fields/Class_of_License__c.field-meta.xml
<CustomField>
    <fullName>Class_of_License__c</fullName>
    <description>TOCB-81</description>
    <formula>IF(SBQQSC__Quote__r.Enterprise_License_Pricebook__c == TRUE, &#39;Enterprise&#39;, &#39;Non-Enterprise&#39;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Class of License</label>
    <type>Text</type>
</CustomField>