unpackaged/main/default/objects/ServiceContract/fields/Continuous_Extension_duration__c.field-meta.xml
<CustomField>
    <fullName>Continuous_Extension_duration__c</fullName>
    <label>Continuous Extension duration</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>12 months</fullName>
            </value>
            <value>
                <fullName>6 months</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>