unpackaged/main/default/objects/ServiceContract/fields/Contract_DB__c.field-meta.xml
<CustomField>
    <fullName>Contract_DB__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contract DB</label>
    <referenceTo>Contract</referenceTo>
    <relationshipLabel>Service Contracts</relationshipLabel>
    <relationshipName>Service_Contracts</relationshipName>
    <type>Lookup</type>
</CustomField>