unpackaged/main/default/objects/ServiceContract/fields/Contract_Extension_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Contract_Extension_Opportunity__c</fullName>
    <description>To identify a contract extension for an existing SaaS Contract.</description>
    <formula>SBQQSC__Opportunity__r.Contract_Extension__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>This is a contract extension for an existing SaaS Contract.</inlineHelpText>
    <label>Agreement Extension</label>
    <type>Checkbox</type>
</CustomField>