unpackaged/main/default/objects/ServiceContract/fields/Contract_Payment_terms__c.field-meta.xml
<CustomField>
    <fullName>Contract_Payment_terms__c</fullName>
    <label>Agreement Payment terms</label>
    <length>50</length>
    <type>Text</type>
</CustomField>