unpackaged/main/default/objects/ServiceContract/fields/Customer_Option__c.field-meta.xml
<CustomField>
    <fullName>Customer_Option__c</fullName>
    <label>Customer Option</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>12 months</fullName>
            </value>
            <value>
                <fullName>12 months x 2</fullName>
            </value>
            <value>
                <fullName>24 months x 2</fullName>
            </value>
            <value>
                <fullName>36 months</fullName>
            </value>
            <value>
                <fullName>60 months</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>