unpackaged/main/default/objects/ServiceContract/fields/Eligible_Discount__c.field-meta.xml
<CustomField>
    <fullName>Eligible_Discount__c</fullName>
    <label>Eligible Discount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>