unpackaged/main/default/objects/ServiceContract/fields/Extensions_Increase_Rate__c.field-meta.xml
<CustomField>
    <fullName>Extensions_Increase_Rate__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Extensions Increase Rate</label>
    <referenceTo>Increase_Rate_Types__c</referenceTo>
    <relationshipLabel>Service Contracts</relationshipLabel>
    <relationshipName>Service_Contracts</relationshipName>
    <type>Lookup</type>
</CustomField>