unpackaged/main/default/objects/ServiceContract/fields/Flip_to_SaaS_Status__c.field-meta.xml
<CustomField>
    <fullName>Flip_to_SaaS_Status__c</fullName>
    <label>Original Agreement Amendment Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>In progress</fullName>
            </value>
            <value>
                <fullName>Processed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>