unpackaged/main/default/objects/ServiceContract/fields/Flipped_Lines__c.field-meta.xml
<CustomField>
    <fullName>Flipped_Lines__c</fullName>
    <label>Flipped Lines</label>
    <summaryFilterItems>
        <field>ContractLineItem.Flipped_Qty__c</field>
        <operation>notEqual</operation>
        <value></value>
    </summaryFilterItems>
    <summaryForeignKey>ContractLineItem.ServiceContractId</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>