unpackaged/main/default/objects/ServiceContract/fields/Flipped_Qty__c.field-meta.xml
<CustomField>
    <fullName>Flipped_Qty__c</fullName>
    <description>Twin field from Quote, set with Process Builder.</description>
    <label>Enterprise Qty</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>