unpackaged/main/default/objects/ServiceContract/fields/Future_licences_and_contracted_prices__c.field-meta.xml
<CustomField>
    <fullName>Future_licences_and_contracted_prices__c</fullName>
    <label>Future licences and contracted prices</label>
    <length>50</length>
    <type>Text</type>
</CustomField>