unpackaged/main/default/objects/ServiceContract/fields/Holiday_Free_Period_on_original_quote__c.field-meta.xml
<CustomField>
    <fullName>Holiday_Free_Period_on_original_quote__c</fullName>
    <formula>OR( SBQQSC__Quote__r.Billing_Holidays__c &gt; 0,  SBQQSC__Quote__r.Free_Periods__c &gt; 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Holiday/Free Period on original quote</label>
    <type>Checkbox</type>
</CustomField>