unpackaged/main/default/objects/ServiceContract/fields/Initial_Period_Increase_Rate__c.field-meta.xml
<CustomField>
    <fullName>Initial_Period_Increase_Rate__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Initial Period Increase Rate</label>
    <referenceTo>Increase_Rate_Types__c</referenceTo>
    <relationshipLabel>Service Contracts (Initial Period Increase Rate)</relationshipLabel>
    <relationshipName>Service_Contracts1</relationshipName>
    <type>Lookup</type>
</CustomField>