unpackaged/main/default/objects/ServiceContract/fields/Initial_term_of_agreement_months__c.field-meta.xml
<CustomField>
    <fullName>Initial_term_of_agreement_months__c</fullName>
    <formula>IF(
(EndDate - StartDate) / 365 * 12 &lt; 1, 1,(EndDate - StartDate) / 365 * 12)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Initial term of agreement (months)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>