unpackaged/main/default/objects/ServiceContract/fields/Invoice_Plan_present_on_Initial_Quote__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Plan_present_on_Initial_Quote__c</fullName>
    <formula>SBQQSC__Quote__r.Invoice_Plan_present__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Invoice Plan present on Initial Quote</label>
    <type>Checkbox</type>
</CustomField>