unpackaged/main/default/objects/ServiceContract/fields/Keep_Prices__c.field-meta.xml
<CustomField>
    <fullName>Keep_Prices__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Keep Prices</label>
    <type>Checkbox</type>
</CustomField>