unpackaged/main/default/objects/ServiceContract/fields/License_Fee_Total__c.field-meta.xml
<CustomField>
    <fullName>License_Fee_Total__c</fullName>
    <formula>SBQQSC__Quote__r.License_Fee_Total__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>License Fee Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>