unpackaged/main/default/objects/ServiceContract/fields/Linked_Perpetual_Agreement__c.field-meta.xml
<CustomField>
    <fullName>Linked_Perpetual_Agreement__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Linked Perpetual Agreement</label>
    <referenceTo>ServiceContract</referenceTo>
    <relationshipLabel>Service Contracts (Linked Perpetual Agreement)</relationshipLabel>
    <relationshipName>Perpetual_OnCloud_Agreements</relationshipName>
    <type>Lookup</type>
</CustomField>