unpackaged/main/default/objects/ServiceContract/fields/Max_Eligible_Discount__c.field-meta.xml
<CustomField>
    <fullName>Max_Eligible_Discount__c</fullName>
    <label>Max Eligible Discount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>