unpackaged/main/default/objects/ServiceContract/fields/No_of_Auto_Ammendments__c.field-meta.xml
<CustomField>
    <fullName>No_of_Auto_Ammendments__c</fullName>
    <description>number of auto-amendments applied to the service contract.</description>
    <label>No of Auto-Ammendments</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>