unpackaged/main/default/objects/ServiceContract/fields/One_off_Extension_duration__c.field-meta.xml
<CustomField>
    <fullName>One_off_Extension_duration__c</fullName>
    <label>One-off Extension duration</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>12 months</fullName>
            </value>
            <value>
                <fullName>6 months</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>