unpackaged/main/default/objects/ServiceContract/fields/Options_Increase_Rate__c.field-meta.xml
<CustomField>
    <fullName>Options_Increase_Rate__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Options Increase Rate</label>
    <referenceTo>Increase_Rate_Types__c</referenceTo>
    <relationshipLabel>Service Contracts (Options Increase Rate)</relationshipLabel>
    <relationshipName>Service_Contracts2</relationshipName>
    <type>Lookup</type>
</CustomField>