unpackaged/main/default/objects/ServiceContract/fields/Original_End_Date_SC_Calc__c.field-meta.xml
<CustomField>
    <fullName>Original_End_Date_SC_Calc__c</fullName>
    <formula>IF( Isblank(Original_End_Date__c ), SBQQSC__Quote__r.End_Date__c ,
SBQQSC__Opportunity__r.Original_End_Date__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Original End Date SC Calc</label>
    <type>Date</type>
</CustomField>