unpackaged/main/default/objects/ServiceContract/fields/Original_Service_Contract__c.field-meta.xml
<CustomField>
    <fullName>Original_Service_Contract__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Original Agreement</label>
    <referenceTo>ServiceContract</referenceTo>
    <relationshipLabel>Original Service Contract</relationshipLabel>
    <relationshipName>Service_Contracts</relationshipName>
    <type>Lookup</type>
</CustomField>