unpackaged/main/default/objects/ServiceContract/fields/Original_Start_Date_SC_Calc__c.field-meta.xml
<CustomField>
    <fullName>Original_Start_Date_SC_Calc__c</fullName>
    <formula>IF( Isblank(Original_Start_Date__c ), SBQQSC__Quote__r.SBQQ__StartDate__c ,
SBQQSC__Opportunity__r.Original_Start_Date__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Original Start Date SC Calc</label>
    <type>Date</type>
</CustomField>