unpackaged/main/default/objects/ServiceContract/fields/Perpetual_On_Cloud_Status__c.field-meta.xml
<CustomField>
    <fullName>Perpetual_On_Cloud_Status__c</fullName>
    <label>Perpetual On Cloud Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>In progress</fullName>
            </value>
            <value>
                <fullName>Processed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>