unpackaged/main/default/objects/ServiceContract/fields/Product_Count_BD__c.field-meta.xml
<CustomField>
    <fullName>Product_Count_BD__c</fullName>
    <label>Product Count BD</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>