unpackaged/main/default/objects/ServiceContract/fields/Product_Count_BD_Historic__c.field-meta.xml
<CustomField>
    <fullName>Product_Count_BD_Historic__c</fullName>
    <label>Product Count BD Historic</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>