unpackaged/main/default/objects/ServiceContract/fields/Product_Count_BD_Previous__c.field-meta.xml
<CustomField>
    <fullName>Product_Count_BD_Previous__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Product Count BD Previous</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>