unpackaged/main/default/objects/ServiceContract/fields/Ramp_Up_Lines__c.field-meta.xml
<CustomField>
    <fullName>Ramp_Up_Lines__c</fullName>
    <label>Ramp Up Lines</label>
    <summaryFilterItems>
        <field>ContractLineItem.IsRampUp__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>ContractLineItem.ServiceContractId</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>