unpackaged/main/default/objects/ServiceContract/fields/Renew_Last_Group_Only__c.field-meta.xml
<CustomField>
    <fullName>Renew_Last_Group_Only__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Renew Last Group Only</label>
    <type>Checkbox</type>
</CustomField>