unpackaged/main/default/objects/ServiceContract/fields/Renewal_Pricing_Method__c.field-meta.xml
<CustomField>
    <fullName>Renewal_Pricing_Method__c</fullName>
    <description>Custom Renewal Pricing field because OOTB functionality does not meet business requirement to represent detailed pricing.</description>
    <inlineHelpText>Defines renewal pricing.</inlineHelpText>
    <label>Renewal Pricing Method</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Renewal_Pricing_Method</valueSetName>
    </valueSet>
</CustomField>