unpackaged/main/default/objects/ServiceContract/fields/Roll_over_periods_amounts__c.field-meta.xml
<CustomField>
    <fullName>Roll_over_periods_amounts__c</fullName>
    <label>Roll over periods amounts</label>
    <length>50</length>
    <type>Text</type>
</CustomField>