unpackaged/main/default/objects/ServiceContract/fields/Rollover_Type__c.field-meta.xml
<CustomField>
    <fullName>Rollover_Type__c</fullName>
    <label>Rollover Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Customer Option and No Extension</fullName>
            </value>
            <value>
                <fullName>Customer Option and Continuous Extension</fullName>
            </value>
            <value>
                <fullName>Customer Option and One-off Extension</fullName>
            </value>
            <value>
                <fullName>One-off Extension</fullName>
            </value>
            <value>
                <fullName>Continuous Extension</fullName>
            </value>
            <value>
                <fullName>No Customer Option and No Extensions</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>