unpackaged/main/default/objects/ServiceContract/fields/Start_End_Date_Difference__c.field-meta.xml
<CustomField>
    <fullName>Start_End_Date_Difference__c</fullName>
    <description>Used to location contracts with End Date - Start Date &gt; 12 months</description>
    <formula>EndDate - StartDate</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Start End Date Difference</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>