unpackaged/main/default/objects/ServiceContract/fields/Stop_Auto_Renewal__c.field-meta.xml
<CustomField>
    <fullName>Stop_Auto_Renewal__c</fullName>
    <label>Stop Auto-Order</label>
    <length>255</length>
    <type>Text</type>
</CustomField>