unpackaged/main/default/objects/ServiceContract/fields/T1_Standard_Contract__c.field-meta.xml
<CustomField>
    <fullName>T1_Standard_Contract__c</fullName>
    <defaultValue>false</defaultValue>
    <label>T1 Standard Contract</label>
    <type>Checkbox</type>
</CustomField>