unpackaged/main/default/objects/ServiceContract/fields/Termination_for_convenience__c.field-meta.xml
<CustomField>
    <fullName>Termination_for_convenience__c</fullName>
    <label>Termination for convenience</label>
    <length>50</length>
    <type>Text</type>
</CustomField>