unpackaged/main/default/objects/ServiceContract/fields/X28_Days_before_Anniversary__c.field-meta.xml
<CustomField>
    <fullName>X28_Days_before_Anniversary__c</fullName>
    <formula>IF(
  AND(
    MONTH(  StartDate ) = 2,
    DAY( StartDate ) = 29,
    NOT( 
      OR( 
        MOD( YEAR( StartDate ), 400 ) = 0, 
        AND( 
          MOD( YEAR( StartDate ), 4 ) = 0,
          MOD( YEAR( StartDate ), 100 ) != 0
        )
      )
    ) 
  ),
  DATE( YEAR(StartDate) + IF(No_of_Auto_Ammendments__c  = null,1,No_of_Auto_Ammendments__c + 1), 3, 1) - 28,
  DATE( YEAR(StartDate) + IF(No_of_Auto_Ammendments__c  = null,1,No_of_Auto_Ammendments__c + 1), MONTH(StartDate), DAY(StartDate)) - 28
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>28 Days before Anniversary</label>
    <type>Date</type>
</CustomField>